--- a/style.css
+++ b/style.css
@@ -3,7 +3,7 @@
     padding: 0px;
 }
 .beautiful-flower-container{
-    background-color: rgb(228, 209, 212);
+    background-color: rgb(243, 236, 236);
     display: flex;
     justify-content: space-around;
     align-items: center;
@@ -13,18 +13,24 @@
     height: 400px;
     border-radius: 35px;
 }
+.heading-one{
+    margin-bottom: 20px;
+    font-size: 30px;
+}
 .btn{
-    background-color:pink ;
-    color: white;
-    padding:15px 20px;
+    background-color:rgb(215, 97, 101) ;
+    color: rgb(255, 255, 255);
+    border-radius: 5px;
     margin-top: 20px;
+    padding: 15px 20px;
+    border: none;
 }
 .feature-flower{
     font-size: 30px;
-    
-}
+    padding: 20px;
+    }
 .featured-flowers-container{
-    background-color: antiquewhite;
+    /* background-color: antiquewhite; */
     padding: 30px;
     text-align: center;
 }
@@ -34,23 +40,23 @@
 
 }
 .flower3a{
-  border-radius:50px 50px 3px 3px;
-  background: #73AD21;
-  padding: 20px; 
-  width: 200px;
-  height: 400px; 
+  border-radius:200px 200px 3px 3px;
+  background: #eec4e3;
+  width: 300px;
+  height: 350px;
+  padding: 40px 40px 0px 40px;
 }
 .flower3b{
-    border-radius:50px 50px 3px 3px;
-    background: #73AD21;
-    padding: 20px; 
-    width: 200px;
-    height: 400px; 
+    border-radius:200px 200px 3px 3px;
+  background: #deeef1;
+  width: 300px;
+  height: 350px;
+  padding: 40px 40px 0px 40px;
   }
   .flower3c{
-    border-radius:50px 50px 3px 3px;
-    background: #73AD21;
-    padding: 20px; 
-    width: 200px;
-    height: 400px; 
+    border-radius:200px 200px 3px 3px;
+  background: #e0e2ee;
+  width: 300px;
+  height: 350px;
+  padding: 40px 40px 0px 40px;
   }
