--- a/style.css
+++ b/style.css
@@ -3,19 +3,23 @@
     padding: 0px;
 }
 .beautiful-flower-container{
-    background-color: rgb(243, 236, 236);
+    background-color: rgb(255, 241, 241);
     display: flex;
     justify-content: space-around;
     align-items: center;
 }
 .flower-Section-one{
     width: 400px;
-    height: 400px;
+    height: 490px;
     border-radius: 35px;
+}
+.descripton-beautiful-flower{
+    color: rgb(158, 156, 156);
 }
 .heading-one{
     margin-bottom: 20px;
-    font-size: 30px;
+    font-size: 60px;
+    color: black;
 }
 .btn{
     background-color:rgb(215, 97, 101) ;
@@ -37,7 +41,13 @@
 .three-flower-container{
     display: flex;
     justify-content: space-around;
-
+    text-align: center;
+    font-size: 20px;
+    font-weight: bold;
+}
+.pink-flower{
+    text-align: center;
+    margin-top: 30px;
 }
 .flower3a{
   border-radius:200px 200px 3px 3px;
@@ -60,3 +70,41 @@
   height: 350px;
   padding: 40px 40px 0px 40px;
   }
+.hot-deal-container{
+    border: lightpink;
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+}
+.hot-deal-title{
+    font-size: 30px;
+    margin-bottom: 30px;
+}
+.h1volor{
+    color: red;
+}
+
+.hot-deat-descrptn{
+
+}
+.instagram-container{
+    text-align: center;
+}
+.instagram-title{
+    font-size: 30px;
+    margin-bottom: 30px;
+}
+.instagram-description{
+    font-size: 30px;
+    margin-bottom: 30px;
+}
+.photo-gallery-container{
+    display: flex;
+    justify-content: space-around;
+}
+.latest-deal-container{
+background-image: url("imges/Rectanglebg.png");
+display: flex;
+justify-content: center;
+
+}
