--- a/style.css
+++ b/style.css
@@ -116,19 +116,22 @@
   justify-content: space-around;
 }
 .latest-deal-container {
-   padding: 200px;
+   padding: 100px;
   background-image: url("imges/Rectanglebg.png");
-  display: flex;
   justify-content: center;
-  align-items: center;
   background-repeat: no-repeat;
   background-size: cover; 
   background-position: center;
   margin: 100px;
 }
-.latest-deal-info{
-  font-size: 18px;
+.deal-item{
+  text-align: center;
 }
+.latest-deal-info{
+  text-align: center;
+  color: gray;
+}
+
 .ftr {
   background-color: black;
   color: white;
