--- a/style.css
+++ b/style.css
@@ -38,52 +38,58 @@
   padding: 30px;
   text-align: center;
 }
+
 .three-flower-container {
   display: flex;
   justify-content: space-around;
   text-align: center;
   font-size: 20px;
   font-weight: bold;
+  margin: 70px;
 }
-.pink-flower {
-  text-align: center;
-  margin-top: 30px;
-}
+
 .flower3a {
   border-radius: 200px 200px 3px 3px;
   background: #eec4e3;
-  width: 300px;
+  width: 250px;
   height: 350px;
   padding: 40px 40px 0px 40px;
+  margin-bottom: 20px;
 }
 .flower3b {
   border-radius: 200px 200px 3px 3px;
   background: #deeef1;
-  width: 300px;
+  width: 250px;
   height: 350px;
   padding: 40px 40px 0px 40px;
+  margin-bottom: 20px;
 }
 .flower3c {
   border-radius: 200px 200px 3px 3px;
   background: #e0e2ee;
-  width: 300px;
+  width: 250px;
   height: 350px;
   padding: 40px 40px 0px 40px;
+  margin-bottom: 20px;
 }
 
 .flower-advertistment {
+  background-color: aliceblue;
   display: flex;
   align-items: center;
   justify-content: space-around;
   align-items: center;
-  margin-bottom: 20px;
-}
+  /* margin-bottom: 20px; */
+  padding: 30px;
+  margin: 100px;
+  }
 
 .add-pic {
   border-radius: 5px solid black;
 }
 
 .hot-deal-container {
+  background-color: antiquewhite;
   border: lightpink;
   display: flex;
   justify-content: space-around;
@@ -102,21 +108,29 @@
 .instagram-container {
   text-align: center;
   width: 80%;
+  margin: 30px;
 }
+
 .instagram-title {
   font-size: 30px;
-  margin-bottom: 30px;
 }
 .instagram-description {
-  font-size: 30px;
+  font-size: 18px;
   margin-bottom: 30px;
 }
+
 .photo-gallery-container {
   display: flex;
   justify-content: space-around;
+  margin: 50px;
 }
+.photo{
+width: 230px;
+height: 250px;
+}
+
 .latest-deal-container {
-   padding: 100px;
+  padding: 100px;
   background-image: url("imges/Rectanglebg.png");
   justify-content: center;
   background-repeat: no-repeat;
