--- a/style.css
+++ b/style.css
@@ -20,6 +20,7 @@
   margin-bottom: 20px;
   font-size: 60px;
   color: black;
+  font-weight: bold;
 }
 .btn {
   background-color: rgb(215, 97, 101);
@@ -51,24 +52,24 @@
 .flower3a {
   border-radius: 200px 200px 3px 3px;
   background: #eec4e3;
-  width: 250px;
-  height: 350px;
+  width:250px;
+  height:350px;
   padding: 40px 40px 0px 40px;
   margin-bottom: 20px;
 }
 .flower3b {
   border-radius: 200px 200px 3px 3px;
   background: #deeef1;
-  width: 250px;
-  height: 350px;
+  width:250px;
+  height:350px;
   padding: 40px 40px 0px 40px;
   margin-bottom: 20px;
 }
 .flower3c {
   border-radius: 200px 200px 3px 3px;
   background: #e0e2ee;
-  width: 250px;
-  height: 350px;
+  width:250px;
+  height:350px;
   padding: 40px 40px 0px 40px;
   margin-bottom: 20px;
 }
@@ -122,11 +123,11 @@
 .photo-gallery-container {
   display: flex;
   justify-content: space-around;
-  margin: 50px;
+  margin: 75px;
 }
 .photo{
-width: 230px;
-height: 250px;
+width: 255px;
+height: 290px;
 }
 
 .latest-deal-container {
@@ -137,20 +138,29 @@ height: 250px;
   background-size: cover; 
   background-position: center;
   margin: 100px;
+  font-size: 20px;
 }
 .deal-item{
   text-align: center;
+  font-weight: bold;
+  margin-bottom: 5px;
 }
 .latest-deal-info{
   text-align: center;
   color: gray;
+}
+.submit-info{
+  display: flex;
+  justify-content:start;
+  /* align-items: center; */
+  
 }
 
 .ftr {
   background-color: black;
   color: white;
   text-align: center;
-  padding: 50px;
+  padding: 55px;
 }
 .flower-spn {
   color: red;
@@ -160,5 +170,5 @@ height: 250px;
 }
 .footer-title {
   font-size: 30px;
-  margin-bottom: 30px;
+  /* margin-bottom: 20px; */
 }
