--- a/style.css
+++ b/style.css
@@ -149,10 +149,15 @@ height: 290px;
   text-align: center;
   color: gray;
 }
+.email{
+  margin: 20px;
+}
 .submit-info{
   display: flex;
-  justify-content:start;
-  /* align-items: center; */
+  justify-content:space-evenly;
+  margin-top: 30px;
+}
+.btn-info{
   
 }
 
